@startuml

title __MODEL's Class Diagram__\n

  namespace model {
    class model.CementBrickModel {
        {static} + DEF_CRACK_DEPTH : int
        {static} + DEF_STEPS : int
        {static} - BRICK_BORDER_COLOR : Color
        {static} - BRICK_INNER_COLOR : Color
        {static} - BRICK_STRENGTH : int
        - brickFace : Shape
        + CementBrickModel()
        + getBrick()
        + repair()
        + setImpact()
        # makeBrickFace()
        # setBrickBorderColor()
        # setBrickInnerColor()
        - updateBrick()
    }
  }
  

  namespace model {
    class model.ClayBrickModel {
        {static} - BRICK_BORDER_COLOR : Color
        {static} - BRICK_INNER_COLOR : Color
        {static} - BRICK_STRENGTH : int
        + ClayBrickModel()
        + getBrick()
        # makeBrickFace()
        # setBrickBorderColor()
        # setBrickInnerColor()
    }
  }
  

  namespace model {
    class model.LevelModel {
        {static} - CEMENT : int
        {static} - CLAY : int
        {static} - LEVELS_COUNT : int
        {static} - STEEL : int
        - level : int
        - levels : BrickController[][]
        + LevelModel()
        + getLevel()
        + hasLevel()
        + nextLevel()
        - makeBrick()
        - makeChessboardLevel()
        - makeLevels()
        - makeSingleTypeLevel()
    }
  }
  

  namespace model {
    class model.RubberBallModel {
        {static} - BALL_BORDER_COLOR : Color
        {static} - BALL_INNER_COLOR : Color
        {static} - BALL_RADIUS : int
        + RubberBallModel()
        # makeBall()
        # setBallBorderColor()
        # setBallInnerColor()
    }
  }
  

  namespace model {
    class model.SteelBrickModel {
        {static} - BRICK_BORDER_COLOR : Color
        {static} - BRICK_BREAK_PROBABILITY : double
        {static} - BRICK_INNER_COLOR : Color
        {static} - BRICK_STRENGTH : int
        - brickFace : Shape
        - random : Random
        + SteelBrickModel()
        + getBrick()
        + impact()
        + setImpact()
        # makeBrickFace()
        # setBrickBorderColor()
        # setBrickInnerColor()
    }
  }
  

  model.CementBrickModel -up-|> controller.BrickController
  model.CementBrickModel o-- controller.CrackController : Crack
  model.ClayBrickModel -up-|> controller.BrickController
  model.LevelModel o-- controller.WallController : wall
  model.RubberBallModel -up-|> controller.BallController
  model.SteelBrickModel -up-|> controller.BrickController


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
